# sweepy

./: pyproject.toml
src/sweepy/: cli.py
