[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sweepy-cli"
version = "0.1.0"
description = "Sweep away unused imports from your codebase"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]

[project.scripts]
sweepy = "sweepy.cli:main"
